<resources>
    <string name="app_name">bts</string>

    <string name="api_key">AIzaSyBRq0S3PETU_ZLi5kCuILZjLtkqBWEJtYs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="building_number">Building : </string>
    <string name="building_description">This is the default building description</string>

    <string name="quiz_name">Quiz</string>

    <string name="nav_training">Training</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_script">Script</string>
    <string name="nav_maps">Maps</string>
    <string name="nav_quizzes">Quizzes</string>
    <string name="nav_progress">Progress</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>

    <string name="talking_points">Talking Points!</string>

    <string name="question_num">Question -</string>
    <string name="question_text">This is the default text for a question?</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="choice_4">Choice 4</string>
    <string name="submit_text">Submit</string>
    <string name="check_text">Check?</string>

    <string name="login">Sign In</string>
    <string name="sign_up">Sign Up!</string>
    <string name="login_new">Are you new user? </string>

    <string name="fname">John</string>
    <string name="lname">Smith</string>
    <string name="email">user1@bts.xyz</string>
    <string name="password">password</string>
    <string name="confirm_pass">confirm password</string>

</resources>
