<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/question_text"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/mc_choice_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/mc_choice_1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button_unselected"
        android:text="@string/choice_1"
        app:layout_constraintBottom_toTopOf="@+id/mc_choice_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mc_choice_2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button_unselected"
        android:text="@string/choice_2"
        app:layout_constraintBottom_toTopOf="@+id/mc_choice_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mc_choice_3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button_unselected"
        android:text="@string/choice_3"
        app:layout_constraintBottom_toTopOf="@+id/mc_choice_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mc_choice_4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button_unselected"
        android:text="@string/choice_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>